# cogle_utils

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.py  format.py  format.sh
examples/: CMakeLists.txt
examples/filesystem_result_example/: CMakeLists.txt  main.cpp
examples/include/: example_helpers.hxx.in
examples/posix_result_example/: CMakeLists.txt  main.cpp
include/: result.hxx  traits.hxx
include/result/: result.hxx  result_storage.hxx
include/utils/: abort.hxx  compatibility.hxx  location.hxx  result.hxx  traits.hxx  utils.hxx
tests/: CMakeLists.txt  main.cpp  test_err.cpp  test_ok.cpp  test_result.cpp  test_result_storage.cpp  test_source_location.cpp
